Project

General

Profile

Actions

Bug #59217

open

metadata cache: if a watcher is disconnected and reinit() fails, it won't be retried again

Added by Casey Bodley about 1 year ago. Updated about 1 year ago.

Status:
Pending Backport
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
cache notify backport_processed
Backport:
pacific quincy reef
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 3 (1 open2 closed)

Copied to rgw - Backport #59360: reef: metadata cache: if a watcher is disconnected and reinit() fails, it won't be retried againResolvedActions
Copied to rgw - Backport #59361: pacific: metadata cache: if a watcher is disconnected and reinit() fails, it won't be retried againResolvedKonstantin ShalyginActions
Copied to rgw - Backport #59362: quincy: metadata cache: if a watcher is disconnected and reinit() fails, it won't be retried againIn ProgressKonstantin ShalyginActions
Actions #1

Updated by Casey Bodley about 1 year ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by Casey Bodley about 1 year ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59360: reef: metadata cache: if a watcher is disconnected and reinit() fails, it won't be retried again added
Actions #4

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59361: pacific: metadata cache: if a watcher is disconnected and reinit() fails, it won't be retried again added
Actions #5

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59362: quincy: metadata cache: if a watcher is disconnected and reinit() fails, it won't be retried again added
Actions #6

Updated by Backport Bot about 1 year ago

  • Tags changed from cache notify to cache notify backport_processed
Actions

Also available in: Atom PDF